# FalcorNRC

./: README.md
Source/RenderPasses/: CMakeLists.txt
Source/RenderPasses/MinimalPathTracer/: CMakeLists.txt  Config.h  MinimalPathTracer.cpp  MinimalPathTracer.h  MinimalPathTracer.rt.slang  Network.cu  Network.h  Params.slang  ResolvePass.cs.slang  composite.json
Source/RenderPasses/NeuralPass/: CMakeLists.txt  main.cu
Source/RenderPasses/NeuralRadiosity/: Network.cu  Network.h  NeuralRadiosity.cpp  NeuralRadiosity.h  Tracer.rt.slang
Source/RenderPasses/PathTracer/: CMakeLists.txt  Network.cu  Params.slang  PathTracer.cpp  PathTracer.h
scripts/: CollectData.py  MinimalPathTracer.py  NeuralRadiosity.py
